# TideBot

./: .env.example  README.md  alembic.ini  config.yaml  env.example  env.py  main.py  pyproject.toml  requirements.txt
adapters/: base.py  qq.py  telegram.py  wechat.py
api/: __init__.py  dependencies.py  middleware.py
core/: __init__.py  agent.py  bootstrap.py  config_manager.py  engine.py  event_bus.py  logger.py  plugin_loader.py  tokenizer.py
core/agent/: context.py  executor.py  persona.py  planner.py
core/capabilities/: builtin_manager.py  plugin_loader.py  registry.py
core/database/: connection.py  models.py  repository.py
core/events/: agent.py  base.py  message.py
core/llm/: base_provider.py  provider_gemini.py  provider_openai.py  router.py
core/memory/: sliding_window.py  summarizer.py
infrastructure/adapters/: __init__.py  qq.py  telegram.py  wechat.py
infrastructure/gateways/: __init__.py  bailian.py  base.py  openai.py
scheduler/: jobs.py  task_manager.py
schemas/: chat.py  config.py  user.py
server/: app.py  cloudflare_tunnel.py  route_app.py  route_web.py
tools/: base_tool.py  web_search.py
web_ui/: index.html
web_ui/assets/js/components/: AppConnectView.js  ChatView.js  ConsoleView.js  Modal.js  Navbar.js
