[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidebot"
version = "0.1.0"
description = "A modern, scalable AI Agent platform."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "TideBot Team", email = "hello@tidebot.ai" }
]
dependencies = [
    # Core Web & API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    
    # Database
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",     # Postgres async driver
    "aiosqlite>=0.20.0",   # SQLite async driver
    
    # Network & Auth
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Utilities
    "loguru>=0.7.2",       # Better logging
    "tenacity>=8.2.3",     # Retry mechanism for LLM calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "black>=24.3.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tidebot"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"] # Flake8, Isort, Bugbear, PyUpgrade
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true