[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tidebot"
version = "0.1.0"
description = "A production-grade, highly scalable AI Agent platform."
authors = [{ name = "TideBot Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]